Added migrations, database, seed data, and Spell interface with repositories; Spellbook index now pulls from the database

--- a/bookofspells/bookofspells/bookofspells.csproj
+++ b/bookofspells/bookofspells/bookofspells.csproj
@@ -6,5 +6,15 @@
 
   <ItemGroup>
     <Folder Include="Views\Spellbook\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
   </ItemGroup>
 </Project>
