--- a/bookofspells/bookofspells/appsettings.Development.json
+++ b/bookofspells/bookofspells/appsettings.Development.json
@@ -10,7 +10,7 @@
   "ConnectionString": {
     "SQLite": "Data Source=BookOfSpells.db",
     "SqlServer": "Server=(localdb)\\MSSQLLocalDB;Database=BookOfSpells; Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AzureSQL": "Server=tcp:cs295-dotnet.database.windows.net,1433;Initial Catalog=BookOfSpells;Persist Security Info=False;User ID={your_userid};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AzureSQL": "Server=tcp:cs295-dotnet.database.windows.net,1433;Initial Catalog=BookOfSpells;Persist Security Info=False;User ID={user_id};Password={password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "mySql": "server=127.0.0.1;uid=root;pwd=PASSWORD;database=BookOfSpells"
   }
 }
