--- a/bookofspells/bookofspells/bookofspells.csproj
+++ b/bookofspells/bookofspells/bookofspells.csproj
@@ -17,5 +17,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
   </ItemGroup>
 </Project>
