Added removing statements for DB temp files

--- a/bookofspells/bookofspells/bookofspells.csproj
+++ b/bookofspells/bookofspells/bookofspells.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="BookOfSpells.db-shm" />
+    <None Remove="BookOfSpells.db-wal" />
+  </ItemGroup>
 </Project>
